# codewars-kata-diary

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
codewars_kata_diary/: 1_snail.py  1_snail_learnings.py  2_determinant.py  2_determinant_learnings.py  3_sumstrings.py  3_sumstrings_learnings.py  testing.py
